# pavo-bootstrap

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  reference.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arr_basics.rs  arr_cursors.rs  map_basics.rs  map_bulk.rs  map_cursors.rs
pavo-testfiles/: a.pavo  b.pavo  c.pavo
src/: arr.rs  builtins.rs  check.rs  compile.rs  context.rs  env.rs  eval.rs  expand.rs  gc_foreign.rs  lib.rs  macros.rs  main.rs  map.rs  object.rs  opaques.rs  read.rs  set.rs  special_forms.rs  value.rs  vm.rs
src/opaques/: map_cursor.rs  rope_cursor.rs  set_cursor.rs  vector_cursor.rs
